--- a/Training-02/App.config
+++ b/Training-02/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+		<appSettings>
+			<add key="maxNumber" value="10"/>
+			<add key="minNumber" value="0"/>
+		</appSettings>
 </configuration>
