--- a/Training-05-New/App.config
+++ b/Training-05-New/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+	<appSettings>
+		<add key="trunk" value="I"/>
+		<add key="brunchStart" value="*"/>
+		<add key="brunchRight" value="/"/>
+		<add key="brunchLeft" value="\"/>
+	</appSettings>
 </configuration>
