--- a/Training-05-New/App.config
+++ b/Training-05-New/App.config
@@ -4,9 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
 	<appSettings>
-		<add key="trunk" value="I"/>
-		<add key="brunchStart" value="*"/>
-		<add key="brunchRight" value="/"/>
-		<add key="brunchLeft" value="\"/>
+		<add key="trunk" value="A"/>
+		<add key="branchStar" value="*"/>
+		<add key="branchRight" value="/"/>
+		<add key="branchLeft" value="\"/>
 	</appSettings>
 </configuration>
