--- a/AutoBazar/App.config
+++ b/AutoBazar/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+	<appSettings>
+		<add key="Path" value="%AppData%\\MyProjects"/>
+		<add key="CarDBPath" value="%AppData%\\MyProjects\\SaveCar.txt"/>
+	</appSettings>
 </configuration>
